fix benchmark
Signed-off-by: baiqiubai <2569722395@qq.com>